# IntelliSense_AI_Smart_Watch_Web

./: .gitignore  new-application.py  pkg-frontend.py  pyproject.toml
backend/ComputingUnit/: apps.py  routing.py  urls.py
backend/ComputingUnit/consumer/: ComputingUnit.py
backend/CraneUtils/: websockets.py
backend/Documents/: urls.py
backend/Documents/views/: api.py  docs.py
backend/Index/: urls.py
backend/Voice/: routing.py  urls.py
backend/Voice/consumer/: RealTimeRecognition.py
backend/Voice/views/: api.py  input.py
backend/backend/: asgi.py  loacl_settings.py  routing.py  settings.py  urls.py
backend/vue/: application.json  vue.py
backend/vue/Documents/: index.html
backend/vue/Index/: index.html
backend/vue/default/: unPlugIn.html
computing_unit/: connection.py  ws_class.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/api/: api.js  request.js
frontend/src/api/websockets/: DeepSeek.js  RealTimeRecognition.js  router.js
frontend/src/assets/: main.css
frontend/src/components/Sider/: Footer.vue  SideBar.vue  TopBar.vue
frontend/src/components/button/: InteractiveHoverButton.vue  RippleButton.vue  VoiceBotton.vue
frontend/src/components/cards/: FlipCard.vue
frontend/src/components/container/: ExpandableGallery.vue
frontend/src/components/input/: VanishingInput.vue
frontend/src/components/text/: BlurReveal.vue  ContainerTextFlip.vue  FlipWords.vue  LineShadowText.vue  MorphingText.vue  RadianText.vue  (+2 more)
frontend/src/ulits/: File.js  useTheme.ts
(+34 files in other folders)
